Cargo, Cliente e Fornecedor com CRUDs ativos. Cliente é o único com Cloneable funcionando corretamente.

--- a/src/visoes/Fornecedor/GerirFornecedor.form
+++ b/src/visoes/Fornecedor/GerirFornecedor.form
@@ -38,14 +38,14 @@
                           <Component id="lblNomeFantasia" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lblCnpj" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtCnpj" pref="223" max="32767" attributes="0"/>
+                          <Component id="txtCnpj" max="32767" attributes="0"/>
                           <Component id="txtNomeFantasia" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="189" max="32767" attributes="0"/>
                       <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnSalvar" min="-2" max="-2" attributes="0"/>
