--- a/src/visoes/Cliente/ListarClientes.form
+++ b/src/visoes/Cliente/ListarClientes.form
@@ -2,9 +2,11 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <NonVisualComponents>
+    <Component class="dao.ClienteDAO" name="clienteDAO">
+    </Component>
     <Component class="java.util.List" name="lstClientes">
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="dados.Data.hi().getLstClientes();"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="clienteDAO.listar()"/>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Cliente&gt;"/>
       </AuxValues>
     </Component>
