--- a/src/visoes/Fornecedor/ListarFornecedores.form
+++ b/src/visoes/Fornecedor/ListarFornecedores.form
@@ -2,9 +2,11 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <NonVisualComponents>
+    <Component class="dao.FornecedorDAO" name="fornecedorDAO">
+    </Component>
     <Component class="java.util.List" name="lstFornecedores">
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="dados.Data.hi().getLstFornecedores();"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="fornecedorDAO.listar()"/>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Fornecedor&gt;"/>
       </AuxValues>
     </Component>
